[package]
name = "smpl"
version = "0.17.0"
authors = ["Alexander Vo <randomcivvy0121@gmail.com>"]
workspace = ".."
edition = "2018"

description = "Core library to compile the SMPL language"

license="MIT"
repository="https://github.com/InnPatron/smpl"

[dependencies]
itertools = "0.8.0"
regex = "1.3.1"
petgraph = "0.4.9"
irmatch = "0.2.0"
failure = "0.1.2"
failure_derive = "0.1.2"
uuid = { version = "0.7", features = ["v4"] }
display_derive = "0.0.0"
