[package]
name = "smpl"
version = "0.18.0"
authors = ["Alexander Vo <randomcivvy0121@gmail.com>"]
workspace = ".."
edition = "2018"

description = "Core library to compile the SMPL language"

license="MIT"
repository="https://github.com/InnPatron/smpl"
readme="../README.md"

build = "build.rs"

[dependencies]
lalrpop-util = "0.19.0"

[build-dependencies]
lalrpop = "0.19.1"
