[package]
name = "smpli"
version = "0.1.3"
authors = ["Alexander Vo <randomcivvy0121@gmail.com>"]
edition = "2018"

description = "Interpreter for the SMPL language"

license="MIT"
repository="https://github.com/InnPatron/smpl"

[dependencies]
smpl = "0.15.1"
irmatch = "0.2.0"
failure = "0.1.2"
failure_derive = "0.1.2"
uuid = { version = "0.7", features = ["v4"] }
derive_builder = "0.7.0"
