[package]
name = "smpli"
version = "0.2.0"
authors = ["Alexander Vo <randomcivvy0121@gmail.com>"]
edition = "2018"

description = "Interpreter for the SMPL language"

license="MIT"
repository="https://github.com/InnPatron/smpl"
readme="../README.md"

[dependencies]
smpl = "0.17.0"
irmatch = "0.2.0"
failure = "0.1.2"
failure_derive = "0.1.2"
uuid = { version = "0.7", features = ["v4"] }
derive_builder = "0.7.0"
paste = "0.1.6"
futures = "0.3.1"
